Swagger autogen user (#67)
* remove custom error message from phone schema, update request validation functions and middlewareso that they return error messages in an array

* add definitions for User requests, responses, errors; add error message for id validation to swagger.js. Add swagger comments to all routes for user
